update front page

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section data-markdown>
-					## Mobile MVPs with React Native
+				<section data-background-video="video/bg.mp4" data-background-video-loop data-background-video-muted>
+					<h2>Mobile MVPs with React Native</h2>
 
-					Philip // The Bakery - [@bakeryhq](http://twitter.com/bakeryhq)
+					<p>Philip // The Bakery - <a href="http://twitter.com/bakeryhq">@bakeryhq</a></p>
 				</section>
 
 				<section>
