refine slides on app structure

--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
 					<p>Philip // The Bakery - <a href="http://twitter.com/bakeryhq">@bakeryhq</a></p>
 				</section>
 
+				<section data-markdown>
+					# 🙋
+					### Let's keep this interactive
+				</section>
+
 				<section>
 					<section data-markdown>
 						### MVP
@@ -103,6 +108,11 @@
 					</section>
 
 					<section data-markdown>
+						### Pokemon Maps
+						![TodoMVC](images/pokemon.png)
+					</section>
+
+					<section data-markdown>
 						### TodoMVC
 						![TodoMVC](images/todomvc.png)
 					</section>
@@ -110,17 +120,12 @@
 					<section data-markdown>
 						### Pixelinho
 						![TodoMVC](images/pixelinho.png)
-					</section>
-
-					<section data-markdown>
-						### Pokemon Maps
-						![TodoMVC](images/pokemon.png)
 					</section>					
 				</section>
 
 				<section>
 					<section data-markdown>
-						### Our stack
+						### Our 🌟 stack 🌟
 						![TodoMVC](images/stack.png)
 					</section>
 
@@ -128,7 +133,7 @@
 						### Generators
 
 						- initial scaffolding
-						- creating new components/containers/reducers/models/sagas etc
+						- components/containers/reducers/models/sagas etc
 						- ! use them past initial scaffolding
 					</section>
 
@@ -140,10 +145,36 @@
 						### Type less
 
 						![Sample generator output](images/generator-out.png)
-					</section>					
-				</section>
+					</section>
 
-				<section>
+					<section data-markdown>
+						### RN
+
+						- standard stuff
+						- Redux for state management
+						- Reselect for performant selectors
+						- Sagas for side effects
+						- Mocha + Enzyme for testing
+					</section>
+
+					<section data-markdown>
+						### RN: App Directory
+
+						![App Directory](images/app-directory.png)
+					</section>
+
+					<section data-markdown>
+						### RN: Component Directory
+
+						![Component Directory](images/component-directory.png)
+					</section>
+
+					<section data-markdown>
+						### RN: State Directory
+
+						![State Directory](images/state-directory.png)
+					</section>
+
 					<section data-markdown>
 						### Server
 
@@ -176,7 +207,12 @@
 
 				<section>
 					<section data-markdown>
-						### Ship all the time
+						![Ship it](images/shipit.jpeg)
+						#Ship it
+					</section>
+
+					<section data-markdown>
+						### Ship early, ship often
 
 						- binary releases with [Fastlane](https://fastlane.tools/)
 						- js bundles with [Codepush](https://microsoft.github.io/code-push/)
